endpoint 지움_Final.ipynb
보안이슈로 지웠습니다.

--- a/FoodSyncAI_Final/Final.ipynb
+++ b/FoodSyncAI_Final/Final.ipynb
@@ -24,10 +24,10 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Azure Custom Vision 설정\n",
-    "prediction_endpoint = \"https://5a050project11-prediction.cognitiveservices.azure.com\"\n",
-    "prediction_key = \"2FKFWm82wp3KqlB4R3rCrhihILJyeJt42yU4QFE1Qm7Jz6eC3lRIJQQJ99AJACL93NaXJ3w3AAAIACOGsPzG\"\n",
-    "project_id = \"48948b9f-9c52-46ea-a6ae-43e46dcee2b3\"\n",
-    "model_name = \"FoodSyncFinal\"\n",
+    "prediction_endpoint = 
+    "prediction_key = 
+    "project_id = 
+    "model_name = 
     "\n",
     "credentials = ApiKeyCredentials(in_headers={\"Prediction-key\": prediction_key})\n",
     "predictor = CustomVisionPredictionClient(endpoint=prediction_endpoint, credentials=credentials)\n",
